# throbberous

./: Cargo.toml  README.md
examples/: .simple_bar.rs.swo  .simple_bar.rs.swp  indeterminate_bar.rs  plain_bar.rs  plain_indeterminate.rs  plain_throbber.rs  progress_and_spinner.rs  realistic_progress.rs  simple_bar.rs  simple_throbber.rs
src/: lib.rs
tests/: bar_test.rs
