[package]
name = "throbberous"
version = "0.1.3"
edition = "2021"
authors = ["trucizna"]
description = "An async-native CLI progress bar and throbber (spinner) library for Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuitingRelic392/throbberous"
homepage = "https://github.com/SuitingRelic392/throbberous"
documentation = "https://docs.rs/throbberous"
readme = "README.md"
keywords = ["progress-bar", "spinner", "throbber", "async", "cli"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "asynchronous",
    "development-tools",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = "0.29"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[features]
default = []

